remove breadcrumb bg

--- a/blogList.html
+++ b/blogList.html
@@ -214,10 +214,7 @@
     <!-- End Header -->
 
     <!-- Start Breadcrumb -->
-    <section
-      class="breadcrumb-section"
-      style="background-image: url(images/background/breadcrumb.jpg)"
-    >
+    <section class="breadcrumb-section">
       <h1 class="page-title">
         <img src="images/icons/title.svg" />
         الأخبار
