--- a/serviceSingle.html
+++ b/serviceSingle.html
@@ -131,9 +131,7 @@
                         <a href="serviceSingle.html">خدمات الحج والعمرة</a>
                       </li>
                       <li>
-                        <a href="serviceSingle.html">
-                          خدمات النقل والموصلات
-                        </a>
+                        <a href="serviceSingle.html"> خدمات النقل والموصلات </a>
                       </li>
                       <li>
                         <a href="serviceSingle.html">خدمات فندقية</a>
@@ -219,10 +217,7 @@
       <div class="servicePage-cover loading-img lazy-img-parent">
         <img data-src="images/services/single.jpg" class="img-fluid lazy-img" />
       </div>
-      <div
-        class="servicePage-content"
-        style="background-image: url(images/background/bg.jpg)"
-      >
+      <div class="servicePage-content">
         <div class="container">
           <div class="section-head">
             <h2 class="section-title">خدمات الحج والعمرة</h2>
