--- a/videos.html
+++ b/videos.html
@@ -131,9 +131,7 @@
                         <a href="serviceSingle.html">خدمات الحج والعمرة</a>
                       </li>
                       <li>
-                        <a href="serviceSingle.html">
-                          خدمات النقل والموصلات
-                        </a>
+                        <a href="serviceSingle.html"> خدمات النقل والموصلات </a>
                       </li>
                       <li>
                         <a href="serviceSingle.html">خدمات فندقية</a>
@@ -216,10 +214,7 @@
     <!-- End Header -->
 
     <!-- Start Breadcrumb -->
-    <section
-      class="breadcrumb-section"
-      style="background-image: url(images/background/breadcrumb.jpg)"
-    >
+    <section class="breadcrumb-section">
       <h1 class="page-title">
         <img src="images/icons/title.svg" />
         مكتبة الفيديوهات
