--- a/about.html
+++ b/about.html
@@ -214,10 +214,7 @@
     <!-- End Header -->
 
     <!-- Start Breadcrumb -->
-    <section
-      class="breadcrumb-section"
-      style="background-image: url(images/background/breadcrumb.jpg)"
-    >
+    <section class="breadcrumb-section">
       <h1 class="page-title">
         <img src="images/icons/title.svg" />
         نبذة عن الخمري
@@ -367,10 +364,7 @@
         </div>
       </section>
 
-      <section
-        class="certificates-section"
-        style="background-image: url(images/background/bg.jpg)"
-      >
+      <section class="certificates-section">
         <div class="container">
           <div class="certificates-content">
             <div class="section-head">
