--- a/servicesList.html
+++ b/servicesList.html
@@ -131,9 +131,7 @@
                         <a href="serviceSingle.html">خدمات الحج والعمرة</a>
                       </li>
                       <li>
-                        <a href="serviceSingle.html">
-                          خدمات النقل والموصلات
-                        </a>
+                        <a href="serviceSingle.html"> خدمات النقل والموصلات </a>
                       </li>
                       <li>
                         <a href="serviceSingle.html">خدمات فندقية</a>
@@ -216,10 +214,7 @@
     <!-- End Header -->
 
     <!-- Start Breadcrumb -->
-    <section
-      class="breadcrumb-section"
-      style="background-image: url(images/background/breadcrumb.jpg)"
-    >
+    <section class="breadcrumb-section">
       <h1 class="page-title">
         <img src="images/icons/title.svg" />
         خدمات الخمري
@@ -236,7 +231,10 @@
     <!-- End Breadcrumb -->
 
     <div class="page-content services-page">
-      <section class="services-section" style="background-image: url(images/background/bg.jpg)">
+      <section
+        class="services-section"
+        style="background-image: url(images/background/bg.jpg)"
+      >
         <div class="container">
           <div class="services-content">
             <div class="section-head">
