--- a/index.html
+++ b/index.html
@@ -767,7 +767,7 @@
                 </h6>
               </div>
             </div>
-            <div class="news-item" data-cat="cat2" style="display: none;">
+            <div class="news-item" data-cat="cat2" style="display: none">
               <a
                 href="blogPost.html"
                 class="news-img loading-img lazy-img-parent"
@@ -793,7 +793,7 @@
                 </h6>
               </div>
             </div>
-            <div class="news-item" data-cat="cat1" style="display: none;">
+            <div class="news-item" data-cat="cat1" style="display: none">
               <a
                 href="blogPost.html"
                 class="news-img loading-img lazy-img-parent"
@@ -821,7 +821,7 @@
                 </h6>
               </div>
             </div>
-            <div class="news-item" data-cat="cat2" style="display: none;">
+            <div class="news-item" data-cat="cat2" style="display: none">
               <a
                 href="blogPost.html"
                 class="news-img loading-img lazy-img-parent"
@@ -850,7 +850,7 @@
                 </h6>
               </div>
             </div>
-            <div class="news-item"data-cat="cat1" style="display: none;">
+            <div class="news-item" data-cat="cat1" style="display: none">
               <a
                 href="blogPost.html"
                 class="news-img loading-img lazy-img-parent"
@@ -879,7 +879,7 @@
                 </h6>
               </div>
             </div>
-            <div class="news-item"data-cat="cat3" style="display: none;">
+            <div class="news-item" data-cat="cat3" style="display: none">
               <a
                 href="blogPost.html"
                 class="news-img loading-img lazy-img-parent"
@@ -908,7 +908,7 @@
                 </h6>
               </div>
             </div>
-            <div class="news-item" data-cat="cat3" style="display: none;">
+            <div class="news-item" data-cat="cat3" style="display: none">
               <a
                 href="blogPost.html"
                 class="news-img loading-img lazy-img-parent"
@@ -937,7 +937,7 @@
                 </h6>
               </div>
             </div>
-            <div class="news-item" data-cat="cat2" style="display: none;">
+            <div class="news-item" data-cat="cat2" style="display: none">
               <a
                 href="blogPost.html"
                 class="news-img loading-img lazy-img-parent"
@@ -965,7 +965,7 @@
                 </h6>
               </div>
             </div>
-            <div class="news-item" data-cat="cat1" style="display: none;">
+            <div class="news-item" data-cat="cat1" style="display: none">
               <a
                 href="blogPost.html"
                 class="news-img loading-img lazy-img-parent"
@@ -1356,10 +1356,6 @@
                     <div class="video-statistics">
                       <span>
                         3
-                        <img src="images/icons/gallery.svg" class="svg" />
-                      </span>
-                      <span>
-                        3
                         <img src="images/icons/views.svg" class="svg" />
                       </span>
                     </div>
@@ -1378,10 +1374,6 @@
                     data-bs-target="#videos1"
                   >
                     <div class="video-statistics">
-                      <span>
-                        3
-                        <img src="images/icons/gallery.svg" class="svg" />
-                      </span>
                       <span>
                         3
                         <img src="images/icons/views.svg" class="svg" />
@@ -1404,10 +1396,6 @@
                     <div class="video-statistics">
                       <span>
                         3
-                        <img src="images/icons/gallery.svg" class="svg" />
-                      </span>
-                      <span>
-                        3
                         <img src="images/icons/views.svg" class="svg" />
                       </span>
                     </div>
@@ -1426,10 +1414,6 @@
                     data-bs-target="#videos1"
                   >
                     <div class="video-statistics">
-                      <span>
-                        3
-                        <img src="images/icons/gallery.svg" class="svg" />
-                      </span>
                       <span>
                         3
                         <img src="images/icons/views.svg" class="svg" />
@@ -1452,10 +1436,6 @@
                     <div class="video-statistics">
                       <span>
                         3
-                        <img src="images/icons/gallery.svg" class="svg" />
-                      </span>
-                      <span>
-                        3
                         <img src="images/icons/views.svg" class="svg" />
                       </span>
                     </div>
@@ -1476,10 +1456,6 @@
                     <div class="video-statistics">
                       <span>
                         3
-                        <img src="images/icons/gallery.svg" class="svg" />
-                      </span>
-                      <span>
-                        3
                         <img src="images/icons/views.svg" class="svg" />
                       </span>
                     </div>
@@ -1498,10 +1474,6 @@
                     data-bs-target="#videos1"
                   >
                     <div class="video-statistics">
-                      <span>
-                        3
-                        <img src="images/icons/gallery.svg" class="svg" />
-                      </span>
                       <span>
                         3
                         <img src="images/icons/views.svg" class="svg" />
